@@ -1662,6 +1662,94 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testOffsetCopyFromObjectSelect
+parameter_list|()
+block|{
+name|ObjectSelect
+argument_list|<
+name|Artist
+argument_list|>
+name|select
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|offset
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|limit
+argument_list|(
+literal|10
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|10
+argument_list|,
+name|select
+operator|.
+name|getOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|10
+argument_list|,
+name|select
+operator|.
+name|getLimit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ColumnSelect
+argument_list|<
+name|String
+argument_list|>
+name|columnSelect
+init|=
+name|select
+operator|.
+name|column
+argument_list|(
+name|Artist
+operator|.
+name|ARTIST_NAME
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|10
+argument_list|,
+name|columnSelect
+operator|.
+name|getOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|10
+argument_list|,
+name|columnSelect
+operator|.
+name|getLimit
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
